@@ -1,3 +1,7 @@
+1999-10-26  Brad Giaccio
+
+	* FvwmIconMan/*.c: New config option *NoIconAction
+
 1999-10-26  Michael Han
 
 	* FvwmIconMan/*.c: FvwmIconam can use an alias. New resolutions: !desk, !page
